[gd_scene load_steps=42 format=3 uid="uid://dedvq1bqt8pww"]

[ext_resource type="Script" uid="uid://dyy6qgw5r6w7q" path="res://scripts/enemy2d.gd" id="1_p2gj0"]
[ext_resource type="Texture2D" uid="uid://do7t0tf7cj35p" path="res://sprites/characters/slime.png" id="2_n6pvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5wyi"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l8pv"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnioy"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xjuo"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a02ik"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu8ps"]
atlas = ExtResource("2_n6pvg")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g40cl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm07"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyl0w"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur4c"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v7ff"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35t6e"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbccl"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24adn"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8bnk"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmbt"]
atlas = ExtResource("2_n6pvg")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8sfj"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwlqs"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwlg4"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sdgb"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrr3x"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyfvk"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iscye"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq06o"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tc40"]
atlas = ExtResource("2_n6pvg")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klxi6"]
atlas = ExtResource("2_n6pvg")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yeyc"]
atlas = ExtResource("2_n6pvg")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6mwi"]
atlas = ExtResource("2_n6pvg")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6fo"]
atlas = ExtResource("2_n6pvg")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rewg1"]
atlas = ExtResource("2_n6pvg")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6x3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}],
"loop": true,
"name": &"back_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5wyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnioy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xjuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a02ik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu8ps")
}],
"loop": true,
"name": &"back_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g40cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyl0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur4c")
}],
"loop": true,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v7ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35t6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbccl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24adn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8bnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmbt")
}],
"loop": true,
"name": &"front_walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8sfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwlqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwlg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sdgb")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyfvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iscye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq06o")
}],
"loop": true,
"name": &"side_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tc40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klxi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yeyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6mwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rewg1")
}],
"loop": true,
"name": &"side_walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sacx8"]
radius = 83.0241

[sub_resource type="CircleShape2D" id="CircleShape2D_p2gj0"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n6pvg"]
radius = 23.0217

[node name="enemy" type="CharacterBody2D" groups=["slime"]]
script = ExtResource("1_p2gj0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h6x3v")
animation = &"new_animation"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_sacx8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_p2gj0")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_n6pvg")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.445

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.199178, 0.681111, 0.299278, 1)
offset_left = -9.0
offset_top = 4.0
offset_right = 81.0
offset_bottom = 29.0
scale = Vector2(0.2, 0.2)
max_value = 30.0
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
